<resources>
    <string name="app_name">Sun Cabbie</string>
    <string name="email_address">Email address</string>
    <string name="address">Current Address</string>
    <string name="completeAddress">Address</string>
    <string name="area">Address Area</string>
    <string name="landmark">Landmark</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_account">New to Sun Cabbie?  </string>
    <string name="sign_up_now">Sign up now</string>
    <string name="sign_up">Sign up</string>
    <string name="sun_logo">Logo</string>
    <string name="report_to">Reporting Manager</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="employee_id">Employee ID</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>

    <string name="header_name"> <font size="28"><i><b>Sun Cabbie</b></i></font> </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_account">Account Details</string>
    <string name="nav_previous_ride">Previous Rides</string>
    <string name="nav_boarding">On Boarding</string>
    <string name="nav_emergency">Emergency</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <!--USER DATA - To fetch SQLite data-->
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="designation">Designation</string>

    <string name="fetch_address">ADDRESS</string>
    <string name="fetch_currentAddress">CURRENT ADDRESS</string>
    <string name="fetch_designation">DESIGNATION</string>
    <string name="fetch_email">EMAIL ADDRESSS</string>

    <string name="fetch_employeeID">EMPLOYEE ID</string>
    <string name="fetch_firstName">FIRST NAME</string>
    <string name="fetch_landmark">LANDMARK</string>
    <string name="fetch_lastName">FIRST NAME</string>

    <string name="fetch_phoneNumber">PHONE NUMBER</string>
    <string name="fetch_registrationToken">REGISTRATION TOKEN</string>
    <string name="fetch_reportingManager">REPORTING MANAGER</string>
    <string name="fetch_uid">UID</string>
</resources>
