<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_orange_500_24dp"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_boarding"
            android:icon="@drawable/on_boarding"
            android:title="@string/nav_boarding" />
        <item
            android:id="@+id/nav_previous"
            android:icon="@mipmap/cabbie_app_icon"
            android:title="@string/nav_previous_ride" />

        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/emergency"
            android:title="@string/nav_emergency" />

        <item
            android:id="@+id/nav_logout"

            android:title="@string/nav_logout" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>